--- a/churchill/static/css/base.css
+++ b/churchill/static/css/base.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Verdana, sans-serif;
   font-size: 16px;
+  background: #ececec;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -38,9 +39,8 @@ h6 {
   margin-bottom: .125rem;
 }
 
-
 a {
-  color: #064d69;
+  color: #000000;
   text-decoration: none;
 }
 
