--- a/churchill/templates/base.html
+++ b/churchill/templates/base.html
@@ -30,10 +30,8 @@
 
   <body>
     {% block content %}{% endblock content %}
-
     <script type="text/javascript">
-      let APP_VERSION = "{% app_version %}",
-        MESSAGES = JSON.parse('{{ messages|messages_to_json|safe }}')
+      let MESSAGES = JSON.parse('{{ messages|messages_to_json|safe }}')
     </script>
     <script defer src="{% static 'js/external/handlebars.min.js' %}"></script>
     <script defer src="{% static 'js/app.js' %}" type="module"></script>
