--- a/churchill/static/css/index.css
+++ b/churchill/static/css/index.css
@@ -78,8 +78,8 @@
 }
 
 #dashboard .timedelta-last-shot .value {
-  margin-bottom: .25rem;
-  font-size: 1.75rem;
+  margin-bottom: .375rem;
+  font-size: 2rem;
   font-weight: 500;
 }
 
@@ -93,6 +93,11 @@
 #dashboard .money-saved-last-shot .value {
   font-size: 1.25rem;
   font-weight: 500;
+}
+
+#dashboard .skipped-volume-last-shot .value.overflow,
+#dashboard .money-saved-last-shot .value.overflow {
+  color: rgba(255, 0, 0, 1);
 }
 
 #dashboard .skipped-volume-last-shot label,
@@ -119,7 +124,7 @@
 #calendar-container .day,
 #calendar-container .date {
   width: calc(100% / 7);
-  height: 1rem;
+  height: .8rem;
   text-align: center;
   color: #636363;
 }
@@ -129,7 +134,7 @@
 }
 
 #calendar-container .date {
-  padding: .375rem 0;
+  padding: .625rem 0;
 }
 
 #calendar-container .date.drunk {
@@ -140,8 +145,11 @@
 #calendar-container .date.drunk:before {
   content: " ";
   position: absolute;
-  left: .59rem;
-  top: -.05rem;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
   width: 1.75rem;
   height: 1.75rem;
   background-color: rgba(255, 0, 0, .7);
@@ -150,7 +158,7 @@
 }
 
 #calendar-container .date.disabled {
-  background-color: #cccccc;
+  color: #aaaaaa;
 }
 
 #shot-list-container.block {
@@ -161,7 +169,7 @@
 #shot-list-container .shot-item {
   display: flex;
   flex-flow: row wrap;
-  margin-bottom: .25rem;
+  margin-bottom: .325rem;
 }
 
 #shot-list-container .shot-item .date {
