--- a/churchill/templates/index.html
+++ b/churchill/templates/index.html
@@ -15,7 +15,8 @@
 
   <div id="container" class="container"></div>
 
-  <button id="show-add-shot-item-form">+</button>
+  <button id="show-settings" class="hidden">&equiv;</button>
+  <button id="show-add-shot-item-form">&plus;</button>
 
   {% include "handlebars/register.html" %}
   {% include "handlebars/login.html" %}
