--- a/churchill/static/css/base.css
+++ b/churchill/static/css/base.css
@@ -45,7 +45,7 @@ a {
 }
 
 input, select, textarea, button {
-  padding: .5rem .75rem;
+  padding: .5rem .5rem .4rem .5rem;
   border: 1px solid #eeeeee;
   border-radius: .25rem;
 }
@@ -60,8 +60,9 @@ button[type=submit] {
 }
 
 .help-text {
+  line-height: 1.3;
   font-size: .9rem;
-  color: #666666;
+  color: #636363;
 }
 
 .hidden {
@@ -76,4 +77,13 @@ button[type=submit] {
   margin: 0 auto;
   padding: 0 1rem;
   max-width: 600px;
+}
+
+form label {
+  display: block;
+  margin-bottom: .25rem;
+}
+
+form .help-text {
+  margin: .25rem 0;
 }
