--- a/churchill/templates/base.html
+++ b/churchill/templates/base.html
@@ -14,7 +14,15 @@
 
     <title>{% block title %}{% translate "Churchill" %}{% endblock %}</title>
 
-    <link href="{% static 'img/favicon.png' %}" rel="shortcut icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static 'img/favicon/safari-pinned-tab.svg' %}" color="#064d69">
+    <link rel="shortcut icon" href="{% static 'img/favicon/favicon.ico' %}">
+    <meta name="msapplication-TileColor" content="#064d69">
+    <meta name="msapplication-config" content="{% static 'img/favicon/browserconfig.xml' %}">
+    <meta name="theme-color" content="#ffffff">
 
     {% block open_graph %}
       <meta property="og:type" content="website">
@@ -26,6 +34,7 @@
     <link href="{% static 'css/reset.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/index.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/dark.css' %}" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
