--- a/churchill/templates/handlebars/settings.html
+++ b/churchill/templates/handlebars/settings.html
@@ -7,21 +7,21 @@
           <label for="currency">{{ translate "Currency" }}</label>
           <input name="currency" id="currency" type="text" value="{{ profile.currency }}"
                  placeholder="{{ translate 'Currency' }}">
-          <div class="help-text">{{ translate "Calculation currency." }}</div>
+          <div class="help-text">{{ translate "Stats calculation currency" }}</div>
         </div>
         <div class="form-row">
           <label for="language">{{ translate "Language" }}</label>
           <input name="language" id="language" type="text" value="{{ profile.language }}"
                  placeholder="{{ translate 'Language' }}">
-          <div class="help-text">{{ translate "Interface language." }}</div>
+          <div class="help-text">{{ translate "Interface language" }}</div>
         </div>
         <div class="form-row">
           <label for="avg_consumption">{{ translate "Average consumption" }}</label>
           <input name="avg_consumption" id="avg_consumption" type="text" value="{{ profile.avg_consumption }}"
                  placeholder="{{ translate 'Average consumption' }}">
           <div class="help-text">
-            {{ translate "Average consumption in milliliters per year." }}<br>
-            {{ translate "Default value is recommended by WHO." }}
+            {{ translate "Average consumption of spirit in milliliters per year" }}<br>
+            {{ translate "Default value is recommended by WHO" }}
           </div>
         </div>
         <div class="form-row">
@@ -29,7 +29,7 @@
           <input name="avg_price" id="avg_price" type="text" value="{{ profile.avg_price }}"
                  placeholder="{{ translate 'Average price' }}">
           <div class="help-text">
-            {{ translate "Average price per 1000 milliliters of spirit." }}
+            {{ translate "Average price per 1000 milliliters of spirit" }}
           </div>
         </div>
         <div class="form-row">
