--- a/churchill/static/css/base.css
+++ b/churchill/static/css/base.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Verdana, sans-serif;
   font-size: 16px;
+  color: #000000;
   background: #ececec;
 }
 
@@ -47,11 +48,13 @@ a {
 input, select, textarea, button {
   padding: .5rem .5rem .4rem .5rem;
   border: 1px solid #eeeeee;
+  background: #ffffff;
   border-radius: .25rem;
 }
 
 button[type=submit] {
   color: #ffffff;
+  border-color: #064d69;
   background: #064d69;
 }
 
