Add balance and shots calculation, update calendars

--- a/churchill/static/css/index.css
+++ b/churchill/static/css/index.css
@@ -195,3 +195,9 @@
   margin-left: .25rem;
   font-size: 1.25rem;
 }
+
+.days-to-the-balance,
+.popular-drink {
+  display: block;
+  padding: .25rem;
+}
