--- a/churchill/static/css/index.css
+++ b/churchill/static/css/index.css
@@ -176,6 +176,28 @@
   color: #aaaaaa;
 }
 
+#calendar-container .calendar-controls {
+  float: right;
+  padding: 0 1rem;
+}
+
+#calendar-container .control {
+  padding: 0 .75rem;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+#calendar-container .control.up {
+  background-image: url(/static/img/icons/up.svg);
+}
+
+#calendar-container .control.down {
+  margin-right: 1rem;
+  background-image: url(/static/img/icons/down.svg);
+}
+
 #shot-list-container.block {
   margin: .75rem 0;
   padding: .75rem 1rem;
