--- a/churchill/templates/handlebars/dashboard.html
+++ b/churchill/templates/handlebars/dashboard.html
@@ -52,7 +52,15 @@
     </div>
   </script>
   <script id="t-calendar" type="text/x-handlebars-template">
-    <h4>{{ translate "Monthly stats" }}</h4>
+    <h4>
+      {{ title }}
+      <span class="calendar-controls">
+        {{#if showNextMonth }}
+        <span id="next-month" class="control down"></span>
+        {{/if}}
+        <span id="previous-month" class="control up"></span>
+      </span>
+    </h4>
     <div class="table">
       <div class="days">
       {{#each daysOfWeek }}
